--- a/conf/sshd.yaml
+++ b/conf/sshd.yaml
@@ -1,13 +1,13 @@
 id: sshd
 kind: Pod
-apiVersion: v1beta1
+apiVersion: v1beta3
 desiredState:
   manifest:
-    version: v1beta1
+    version: v1beta3
     id: sshd
     containers:
       - name: master
-        image: 121.40.171.96:5000/sshd
+        image: reg:5000/sshd
         cpu: 1000
         ports:
           - name: sshd
@@ -15,5 +15,7 @@ desiredState:
         env:
           - key: NETWORK
             value: "test"
+    nodeSelector:
+      name: m4
 labels:
   name: sshd
