--- a/conf/sshd4.yaml
+++ b/conf/sshd4.yaml
@@ -1,20 +1,21 @@
-id: sshd2
+id: sshd4
 kind: Pod
 apiVersion: v1beta1
 desiredState:
   manifest:
     version: v1beta1
-    id: sshd2
+    id: sshd4
     containers:
-      - name: sshd2
-        image: reg:5000/sshd
+      - name: master
+        image: 121.40.171.96:5000/sshd
+        cpu: 1000
         ports:
           - name: sshd
             containerPort: 22
         env:
           - key: NETWORK
             value: "test"
-  nodeSelector:
-    name: m2
+    nodeSelector:
+      name: a1
 labels:
   name: sshd
