add bs upper_bound lower_bound

--- a/conf/sshd.yaml
+++ b/conf/sshd.yaml
@@ -13,7 +13,7 @@ desiredState:
           - name: sshd
             containerPort: 22
         env:
-          - key: NETWORK
+          - key: SP
             value: "test"
     nodeSelector:
       name: m4
