--- a/conf/busybox.yaml
+++ b/conf/busybox.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: busybox
-  namespace: default
+  name: busybox22
+  namespace: cxy
 spec:
   containers:
   - image: busybox
@@ -13,4 +13,4 @@ spec:
     name: busybox
   restartPolicy: Always
   nodeSelector:
-    kubernetes.io/hostname: 10.10.103.174
+    kubernetes.io/hostname: 10.10.103.176
