--- a/conf/netexp.yaml
+++ b/conf/netexp.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: busybox20
+  name: net3
   namespace: cxy
 spec:
   containers:
@@ -10,7 +10,5 @@ spec:
       - sleep
       - "3600"
     imagePullPolicy: IfNotPresent
-    name: busybox
+    name: netexp
   restartPolicy: Always
-  nodeSelector:
-    kubernetes.io/hostname: 10.10.103.175
